# GOOGLE-2ND--ROUND

./: .env  .firebaserc  .gitignore  .requirements.txt  CODEBASE_IMPROVEMENTS.md  FIREBASE_DEPLOYMENT_GUIDE.md  FIREBASE_SETUP.md  FIRESTORE_INTEGRATION.md  GEOTAG_FEATURE.md  GEOTAG_TESTING_GUIDE.md  README.md  UNIFIED_DATA_FIRESTORE.md  USER_DATA_RETENTION.md  deploy-all.sh  deploy-api-gateway.sh  deploy-backend.sh  deploy-orchestrator-full.sh  deploy-orchestrator-minimal.sh  deploy-orchestrator-robust.sh  deploy-orchestrator-simple.sh  deploy-orchestrator.sh  deploy.ps1  deploy.sh  firebase.json  firestore.indexes.json  firestore.rules  req.txt  requirements.txt  shell.nix  storage.rules  test_firebase_setup.py  turbo.json
.firebase/: hosting.YXBwcy9mcm9udGVuZC9vdXQ.cache
agents/: agent_router.py  agglomerator.py  (+24 more)
news-podcast-agent/: .gitignore  API_README.md  CONTRIBUTING.md  GITHUB_SETUP.md  LICENSE  Makefile  README.md  fix_config.py  frontend_example.html  playground.py  pyproject.toml  run_api.py
news-podcast-agent/.github/workflows/: ci.yml
news-podcast-agent/app/: __init__.py  agent.py  agent_engine_app.py  api_server.py  config.py  install_deps.py  news_podcast_agent.py  podcast_bengaluru_en.txt  podcast_wrapper.py  requirements.txt  setup_simple.py  tools.py
news-podcast-agent/app/utils/: files.py  tracing.py  typing.py
news-podcast-agent/deployment/: README.md  main.tf  terraform.tfvars.example  variables.tf
news-podcast-agent/tests/: __init__.py  conftest.py  test_agent.py  test_agent_engine_app.py  test_config.py  test_tools.py  test_utils.py
(+67 files in other folders)
